--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="upperline">
         <nav>
             <div class="logo">
-              <b>S.K.</b>
+              <b>Sasank Khatri</b>
             </div>
             <div class="main-row">
               <ul>
