--- a/index.html
+++ b/index.html
@@ -1,27 +1,80 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SasankKhatri-INFO</title>
+    <title>Sasank Khatri | Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="Images/icon.png">
 </head>
 <body>
-    <div class="upperline">
-        <nav>
-            <div class="logo">
-              <b>Sasank Khatri</b>
+
+    <!-- Navbar -->
+    <nav>
+        <h2 class="logo">Sasank</h2>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero">
+        <h1>Hello, I'm <span>Sasank Khatri</span></h1>
+        <p>Computer Programming Student | Web Developer</p>
+        <button onclick="scrollToContact()">Hire Me</button>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>
+            I am a computer programming student passionate about web development.
+            I enjoy building websites, learning new technologies, and improving my skills every day.
+        </p>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="section dark">
+        <h2>Skills</h2>
+        <div class="skills">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+            <span>Python</span>
+            <span>SQL</span>
+            <span>Git</span>
+        </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="section">
+        <h2>Projects</h2>
+        <div class="projects">
+            <div class="card">
+                <h3>Portfolio Website</h3>
+                <p>Personal portfolio using HTML, CSS, and JavaScript.</p>
             </div>
-            <div class="main-row">
-              <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Bio</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">More Info</a></li>
-              </ul>
+            <div class="card">
+                <h3>Room Booking App</h3>
+                <p>Room booking system built with PowerApps.</p>
             </div>
-        </nav>
-        
-    </div>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section dark">
+        <h2>Contact Me</h2>
+        <p>Email: kcsasank78045@gmail.com</p>
+        <p>Phone: 9867876979</p>
+    </section>
+
+    <footer>
+        <p>© 2026 Sasank Khatri</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
