--- a/index.html
+++ b/index.html
@@ -5,15 +5,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Sasank Khatri | Developer Portfolio</title>
 
-<link rel="stylesheet" href="style.css">
+<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+
+<!-- Font Awesome Icons -->
+<link rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Dark Mode Toggle -->
 <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-<!-- Navbar -->
+<!-- Header -->
 <header>
   <h2 class="logo">Sasank.</h2>
   <nav>
@@ -25,14 +31,23 @@
   </nav>
 </header>
 
-<!-- Hero -->
+<!-- Hero Section -->
 <section id="home" class="hero">
   <div class="hero-text">
-    <h1>Hi, I'm <span>Sasank</span></h1>
+    <h1>Hi, I'm <span>Sasank Khatri</span></h1>
     <p>Computer Programming Student & Web Developer</p>
     <a href="#contact" class="btn">Hire Me</a>
+
+    <!-- Social Media Links -->
+    <div class="social-links">
+      <a href="https://www.linkedin.com/in/sasank-khatri-6548672a9/" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/SasankKhatri" target="_blank"><i class="fab fa-github"></i></a>
+      <a href="https://www.instagram.com/sashank_kc" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/sasankkhatri" target="_blank"><i class="fab fa-facebook"></i></a>
+    </div>
   </div>
-  <img src="profile.jpg" class="profile-pic" alt="Profile">
+
+  <img src="profile.jpg" class="profile-pic" alt="Profile Photo">
 </section>
 
 <!-- About -->
@@ -40,7 +55,7 @@
   <h2>About Me</h2>
   <p>
     I’m a passionate computer programming student focused on building modern,
-    scalable web applications with clean UI and smooth UX.
+    scalable web applications with clean UI and smooth user experiences.
   </p>
 </section>
 
@@ -63,11 +78,11 @@
   <div class="project-grid">
     <div class="project-card">
       <h3>Portfolio Website</h3>
-      <p>Modern responsive portfolio using HTML, CSS & JS.</p>
+      <p>Modern responsive portfolio using HTML, CSS & JavaScript.</p>
     </div>
     <div class="project-card">
       <h3>Room Booking App</h3>
-      <p>PowerApps room booking system with calendar logic.</p>
+      <p>PowerApps room booking system with calendar-based logic.</p>
     </div>
   </div>
 </section>
@@ -79,7 +94,16 @@
   <p>Phone: 9867876979</p>
 </section>
 
-<footer>© 2026 Sasank Khatri</footer>
+<!-- Footer -->
+<footer>
+  <div class="social-links">
+    <a href="https://www.linkedin.com/in/sasank-khatri-6548672a9/" target="_blank"><i class="fab fa-linkedin"></i></a>
+    <a href="https://github.com/SasankKhatri" target="_blank"><i class="fab fa-github"></i></a>
+    <a href="https://www.instagram.com/sashank_kc" target="_blank"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.facebook.com/sasankkhatri" target="_blank"><i class="fab fa-facebook"></i></a>
+  </div>
+  <p>© 2026 Sasank Khatri</p>
+</footer>
 
 <script src="script.js"></script>
 </body>
