--- a/index.html
+++ b/index.html
@@ -3,25 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Sasank Khatri | Developer Portfolio</title>
+<title>Sasank Khatri | Portfolio</title>
 
-<!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-
-<!-- Font Awesome Icons -->
-<link rel="stylesheet"
-href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- Dark Mode Toggle -->
+<!-- Background blobs -->
+<div class="blob blob1"></div>
+<div class="blob blob2"></div>
+
 <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
 
-<!-- Header -->
 <header>
-  <h2 class="logo">Sasank.</h2>
+  <h2 class="logo">Sasank<span>.</span></h2>
   <nav>
     <a href="#home">Home</a>
     <a href="#about">About</a>
@@ -31,14 +28,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
   </nav>
 </header>
 
-<!-- Hero Section -->
-<section id="home" class="hero">
+<section id="home" class="hero reveal">
   <div class="hero-text">
     <h1>Hi, I'm <span>Sasank Khatri</span></h1>
-    <p>Computer Programming Student & Web Developer</p>
-    <a href="#contact" class="btn">Hire Me</a>
+    <h2 class="typing"></h2>
+    <a href="#contact" class="btn">Let’s Work Together</a>
 
-    <!-- Social Media Links -->
     <div class="social-links">
       <a href="https://www.linkedin.com/in/sasank-khatri-6548672a9/" target="_blank"><i class="fab fa-linkedin"></i></a>
       <a href="https://github.com/SasankKhatri" target="_blank"><i class="fab fa-github"></i></a>
@@ -47,20 +42,18 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     </div>
   </div>
 
-  <img src="profile.jpg" class="profile-pic" alt="Profile Photo">
+  <img src="profile.jpg" class="profile-pic" alt="Profile">
 </section>
 
-<!-- About -->
-<section id="about" class="section glass">
+<section id="about" class="section glass reveal">
   <h2>About Me</h2>
   <p>
-    I’m a passionate computer programming student focused on building modern,
-    scalable web applications with clean UI and smooth user experiences.
+    I’m a computer programming student who loves building modern,
+    animated, user-friendly web experiences with clean code and strong UI/UX.
   </p>
 </section>
 
-<!-- Skills -->
-<section id="skills" class="section">
+<section id="skills" class="section reveal">
   <h2>Skills</h2>
   <div class="skills-grid">
     <div class="skill">HTML</div>
@@ -72,36 +65,27 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
   </div>
 </section>
 
-<!-- Projects -->
-<section id="projects" class="section glass">
+<section id="projects" class="section glass reveal">
   <h2>Projects</h2>
   <div class="project-grid">
     <div class="project-card">
       <h3>Portfolio Website</h3>
-      <p>Modern responsive portfolio using HTML, CSS & JavaScript.</p>
+      <p>Advanced animated personal portfolio.</p>
     </div>
     <div class="project-card">
       <h3>Room Booking App</h3>
-      <p>PowerApps room booking system with calendar-based logic.</p>
+      <p>PowerApps room booking system.</p>
     </div>
   </div>
 </section>
 
-<!-- Contact -->
-<section id="contact" class="section">
+<section id="contact" class="section reveal">
   <h2>Contact</h2>
   <p>Email: kcsasank78045@gmail.com</p>
   <p>Phone: 9867876979</p>
 </section>
 
-<!-- Footer -->
 <footer>
-  <div class="social-links">
-    <a href="https://www.linkedin.com/in/sasank-khatri-6548672a9/" target="_blank"><i class="fab fa-linkedin"></i></a>
-    <a href="https://github.com/SasankKhatri" target="_blank"><i class="fab fa-github"></i></a>
-    <a href="https://www.instagram.com/sashank_kc" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.facebook.com/sasankkhatri" target="_blank"><i class="fab fa-facebook"></i></a>
-  </div>
   <p>© 2026 Sasank Khatri</p>
 </footer>
 
