--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 <header>
-  <h2 class="logo">Sasank<span>.</span></h2>
+  <h2 class="logo">Sasank Khatri</span></h2>
 
   <nav>
     <a href="#home">Home</a>
